--- a/Microbit/GPT+Microbit/01.변수의 이해.md
+++ b/Microbit/GPT+Microbit/01.변수의 이해.md
@@ -5,7 +5,7 @@
 ```
 from microbit import *
 
-text = "Hello"
+text = 'Hello'
 display.scroll(text)
 ```
 
@@ -14,11 +14,11 @@ display.scroll(text)
 ```
 from microbit import *
 
-pattern = Image("05050:"
-                "05050:"
-                "05050:"
-                "99999:"
-                "09990")
+pattern = Image('05050:'
+                '05050:'
+                '05050:'
+                '99999:'
+                '09990')
 
 display.show(pattern)
 ```
@@ -53,11 +53,11 @@ sleep(1000)
 ```
 from microbit import *
 
-Led_square = Image("99999:"
-                    "88888:"
-                    "77777:"
-                    "66666:"
-                    "55555")
+Led_square = Image('99999:'
+                   '88888:'
+                   '77777:'
+                   '66666:'
+                   '55555')
 
 display.show(Led_square)
 ```
