Update 02.입력과 출력, 함수의 이해.md

--- a/Microbit/GPT+Microbit/02.입력과 출력, 함수의 이해.md
+++ b/Microbit/GPT+Microbit/02.입력과 출력, 함수의 이해.md
@@ -4,7 +4,7 @@
 * 샘플코드_01
 ```
 from microbit import *
-word_input=input("word:")
+word_input=input('word:')
 
 while True:
     display.scroll(word_input)
@@ -40,8 +40,8 @@ while True:
 from microbit import *
 
 while True:
-    word_a=input("num_1:")
-    word_b=input("num_2:")
+    word_a=input('num_1:')
+    word_b=input('num_2:')
     display.scroll(word_a)
     display.show(word_b)
     sleep(1000)
@@ -57,7 +57,7 @@ while True:
     x = accelerometer.get_x()
     y = accelerometer.get_y()
     z = accelerometer.get_z()
-    print("Acceleration - X:", x, "Y:", y, "Z:", z)
+    print('Acceleration - X:', x, 'Y:', y, 'Z:', z)
     sleep(1000)
 ```
 
