--- a/Microbit/GPT+Microbit/03.자료형.md
+++ b/Microbit/GPT+Microbit/03.자료형.md
@@ -42,12 +42,12 @@ display.scroll(str(var_04_str))
 from microbit import *
 while True:
     if button_a.was_pressed():
-        var=int(input("정수를 입력해주세요:"))
+        var=int(input('정수를 입력해주세요:'))
         display.scroll(str(type(var)))
         display.clear()
     
     if button_b.was_pressed():
-        var=input("문자를 입력해주세요:")
+        var=input('문자를 입력해주세요:')
         display.scroll(str(type(var)))
         display.clear()
 ```
@@ -79,12 +79,12 @@ from microbit import *
 import music
 while True:
     if button_a.was_pressed():
-        var=int(input("정수를 입력해주세요:"))
+        var=int(input('정수를 입력해주세요:'))
         display.scroll(str(type(var)))
         display.clear()
     
     if button_b.was_pressed():
-        var=input("문자를 입력해주세요:")
+        var=input('문자를 입력해주세요:')
         display.scroll(str(type(var)))
         display.clear()
     if button_a.is_pressed() or button_b.is_pressed():
@@ -98,7 +98,7 @@ while True:
 from microbit import *
 import music
 while True:
-    data = input("데이터 값을 입력하세요: ")  
+    data = input('데이터 값을 입력하세요:')  
     try:
         data = eval(data) 
         data_type = type(data).__name__  
@@ -115,5 +115,5 @@ while True:
         else:
             music.play(music.RINGTONE)
     except Exception as e:
-        display.scroll("Error") 
+        display.scroll('Error') 
 ```
