--- a/Microbit/GPT+Microbit/05.문자열(출력,연산).md
+++ b/Microbit/GPT+Microbit/05.문자열(출력,연산).md
@@ -22,8 +22,8 @@ I love Microbit
 ```
 from microbit import *
 
-part1 = "Micro"
-part2 = "Bit"
+part1 = 'Micro'
+part2 = 'Bit'
 part3 = 2
 whole = part1 + part2
 
@@ -33,7 +33,7 @@ print(part1 * part3)
 display.scroll(whole)
 ```
 
-* [런모어 질문] 문자열에 '(작은 따옴표)'는 어떻게 표현하나?
+* [런모어 질문] 문자열 안에서 '(작은 따옴표)'는 어떻게 표현하나?
 
 ### 문자열 연산을 활용하여 측정된 온도 표현하기
 * 샘플코드_03
@@ -41,7 +41,7 @@ display.scroll(whole)
 from microbit import *
 
 temperature = temperature()  # 마이크로 비트의 현재 온도를 얻음
-message = "Temp: " + str(temperature) + "C"
+message = 'Temp: ' + str(temperature) + 'C'
 
 # 온도 정보가 포함된 문자열 표시
 display.scroll(message)
@@ -54,9 +54,9 @@ display.scroll(message)
 from microbit import *
 
 # 각 부분 문자열 정의
-part1 = "I "
-part2 = input("영어 동사를 입력해주세요:")
-part3 = "you"
+part1 = 'I'
+part2 = input('영어 동사를 입력해주세요:')
+part3 = 'you'
 
 # 문자열 연결하여 비밀 메시지 생성
 secret_message = part1 + part2 + part3
@@ -70,8 +70,8 @@ display.scroll(secret_message)
 ```
 from microbit import *
 
-part1 = "Micro"
-part2 = "Bit"
+part1 = 'Micro'
+part2 = 'Bit'
 part3 = 2
 whole = part1 + part2
 
@@ -96,7 +96,7 @@ temperature_reading = temperature()
 sound_level = microphone.sound_level()
 
 # 온도와 사운드 레벨을 문자열로 결합
-message = "Temp: " + str(temperature_reading) + "C, " + "Sound: " + str(sound_level) + " dB"
+message = 'Temp: ' + str(temperature_reading) + 'C, ' + 'Sound: ' + str(sound_level) + ' dB'
 
 # 결합된 메시지 표시
 display.scroll(message)
@@ -121,7 +121,7 @@ from microbit import *
 import time
 
 # 10초간 버튼 입력 기다리기
-display.scroll("Go!")
+display.scroll('Go!')
 time.sleep(10)
 
 # 버튼 누른 횟수 가져오기
@@ -129,7 +129,7 @@ a_presses = button_a.get_presses()
 b_presses = button_b.get_presses()
 
 # 결과 문자열 생성 및 출력
-result = "A: " + str(a_presses) + " times, B: " + str(b_presses) + " times"
+result = 'A: ' + str(a_presses) + ' times, B: ' + str(b_presses) + ' times'
 display.scroll(result)
 
 ```
