--- a/Microbit/GPT+Microbit/06.문자열(인덱싱, 슬라이싱)파트.md
+++ b/Microbit/GPT+Microbit/06.문자열(인덱싱, 슬라이싱)파트.md
@@ -22,7 +22,13 @@ index_num=text.index('I')
 print(index_num)
 ```
 
-* [런모어 질문] '파이썬 문자열의 값을 인덱싱하여 변경할 수 있는가?
+* [런모어 질문] 파이썬 문자열의 값을 인덱싱하여 변경할 수 있는가? 아래 코드는 적용 가능한가?
+```
+word = Python
+word[0]=T
+print(word) #Tython 이라고 나오는가?
+```
+
 
 ### 문자열 슬라이싱 기본
 * 샘플코드_02
