--- a/Microbit/GPT+Microbit/07.문자열(포멧팅, 문자열 함수).md
+++ b/Microbit/GPT+Microbit/07.문자열(포멧팅, 문자열 함수).md
@@ -37,8 +37,38 @@ while True:
     sleep(2000)
 ```
 
-*샘플코드_03
+### 문자열 매서드
+* [런모어 질문] 매서드(method)와 함수(definition)의 차이는?
+* 함수는 함수 이름으로 독립적으로 호출되고, 메소드는 메소드 이름만으로 호출할 수 없고 객체와 함께 호출되는 차이점이 있다.
+* 샘플코드_03
 ```
+# 원본 문자열
+original_string = "Hello, World!"
+
+# 문자열을 모두 대문자로 변환
+uppercase_string = original_string.upper()
+print("대문자로 변환:", uppercase_string)
+
+# 문자열을 모두 소문자로 변환
+lowercase_string = original_string.lower()
+print("소문자로 변환:", lowercase_string)
+
+# 문자열 앞뒤의 공백 제거
+trimmed_string = "   Example String   ".strip()
+print("앞뒤 공백 제거:", trimmed_string)
+
+# 문자열을 다른 문자로 대체
+replaced_string = original_string.replace("World", "Python")
+print("대체된 문자열:", replaced_string)
+
+# 문자열을 공백을 기준으로 나누어 리스트로 변환
+split_string = "apple,banana,cherry".split(",")
+print("나눈 결과:", split_string)
+
+# 문자열의 길이 확인
+length = len(original_string)
+print("문자열 길이:", length)
+
 ```
 
 ## 이해하기 샘플코드
