Update 07.문자열(포멧팅, 문자열 함수).md

--- a/Microbit/GPT+Microbit/07.문자열(포멧팅, 문자열 함수).md
+++ b/Microbit/GPT+Microbit/07.문자열(포멧팅, 문자열 함수).md
@@ -15,6 +15,7 @@ while True:
     display.scroll(message)
     sleep(2000)
 ```
+
 ### 문자열 포멧팅 함수 활용
 * 샘플코드_02
 ```
@@ -43,31 +44,31 @@ while True:
 * 샘플코드_03
 ```
 # 원본 문자열
-original_string = "Hello, World!"
+original_string = 'Hello, World!'
 
 # 문자열을 모두 대문자로 변환
 uppercase_string = original_string.upper()
-print("대문자로 변환:", uppercase_string)
+print('대문자로 변환:', uppercase_string)
 
 # 문자열을 모두 소문자로 변환
 lowercase_string = original_string.lower()
-print("소문자로 변환:", lowercase_string)
+print('소문자로 변환:', lowercase_string)
 
 # 문자열 앞뒤의 공백 제거
-trimmed_string = "   Example String   ".strip()
-print("앞뒤 공백 제거:", trimmed_string)
+trimmed_string = '   Example String   '.strip()
+print('앞뒤 공백 제거:', trimmed_string)
 
 # 문자열을 다른 문자로 대체
-replaced_string = original_string.replace("World", "Python")
-print("대체된 문자열:", replaced_string)
+replaced_string = original_string.replace('World', 'Python')
+print('대체된 문자열:', replaced_string)
 
 # 문자열을 공백을 기준으로 나누어 리스트로 변환
-split_string = "apple,banana,cherry".split(",")
-print("나눈 결과:", split_string)
+split_string = 'apple,banana,cherry'.split(',')
+print('나눈 결과:', split_string)
 
 # 문자열의 길이 확인
 length = len(original_string)
-print("문자열 길이:", length)
+print('문자열 길이:', length)
 
 ```
 
