Update 07.문자열(포멧팅, 문자열 함수).md

--- a/Microbit/GPT+Microbit/07.문자열(포멧팅, 문자열 함수).md
+++ b/Microbit/GPT+Microbit/07.문자열(포멧팅, 문자열 함수).md
@@ -75,6 +75,22 @@ print('문자열 길이:', length)
 ## 이해하기 샘플코드
 *샘플코드_01
 ```
+from microbit import *
+import speech
+
+set_volume(128) #스피커 볼륨 컨트롤(0-128), 128이 최대
+speech.say('Hello, world. How are you?')
+
+name = "Microbit"
+age = 5
+height = 178.8
+
+message = "Hello, I'm %s and I'm %d years old! I am %0.2f centimeters" % (name, age, height)
+print(message)
+
+while True:
+    speech.say(message)
+    sleep(2000)
 ```
 
 *샘플코드_02
