Update 07.문자열(포멧팅, 문자열 함수).md

--- a/Microbit/GPT+Microbit/07.문자열(포멧팅, 문자열 함수).md
+++ b/Microbit/GPT+Microbit/07.문자열(포멧팅, 문자열 함수).md
@@ -75,7 +75,7 @@ print('문자열 길이:', length) #7번째 줄 출력
 ```
 
 ## 이해하기 샘플코드
-*샘플코드_01
+* 샘플코드_01
 ```
 from microbit import *
 import speech
@@ -95,15 +95,48 @@ while True:
     sleep(2000)
 ```
 
-*샘플코드_02
+* 샘플코드_02
 ```
+from microbit import *
+import music
+
+print('볼륨 범위: 1(작은 볼륨) ~ 128(큰 볼륨)입니다')
+print('음높이 범위 : 10(10Hz) ~ 1000(1000Hz)입니다')
+G=Sound.GIGGLE
+while True:
+    ##주파수 이해
+    vol=int(input('원하는 볼륨을 입력해주세요:'))
+    pitch=int(input('원하는 피치(주파수)를 입력해주세요:'))
+    set_volume(vol)
+    music.pitch(pitch)
+    
+    
+    audio.play(Sound.GIGGLE) #Sound 클래스 이해(더 알아보기)
+    print('소리 볼륨은 {}이고, 피치는 {}입니다'.format(vol, pitch))
+
 ```
 
-*샘플코드_03
+* 샘플코드_03
 ```
+from microbit import *
+
+# 사용자로부터 문자열 입력 받기
+user_input = input("영어 문자열을 입력하세요: ")
+
+# 입력한 문자열을 모두 대문자로 변환
+uppercase_input = user_input.upper()
+
+# 문자열의 길이 계산
+length = len(uppercase_input)
+
+# 결과를 LED 디스플레이에 출력
+print('입력한 문자열을 대문자로 변환: {0}'.format(uppercase_input))
+print('문자열 길이(공백 포함): {0}'.format(length))
+display.scroll("{}".format(uppercase_input))
+
 ```
 
 ## 적용하기 샘플코드
-*샘플코드_01
+* 샘플코드_01
 ```
 ```
