--- a/Microbit/GPT+Microbit/07.문자열(포멧팅, 문자열 함수).md
+++ b/Microbit/GPT+Microbit/07.문자열(포멧팅, 문자열 함수).md
@@ -138,7 +138,7 @@ display.scroll("{}".format(uppercase_input))
 
 ## 적용하기 샘플코드
 * 샘플코드_01
-  - 챕터 6에서 사용한 GPT 프롬프트 템플릿
+  - 챕터 6에서 사용한 GPT프롬프트 템플릿
 ```
 1.코드 언어:
 2.코드 설계 시 사용할 마이크로비트 라이브러리 함수:
@@ -151,7 +151,7 @@ display.scroll("{}".format(uppercase_input))
 9.추가 요청 사항_02:
 ```
 
-  - 본 챕터에서 사용할 프롬프트 템플릿(정교하게 수정)
+  - 본 챕터에서 사용할 GPT프롬프트 템플릿(정교하게 수정)
 ```
 1.코드 언어:
 2.사용할 파이썬 문법:
