Update 07.문자열(포멧팅, 문자열 함수).md

--- a/Microbit/GPT+Microbit/07.문자열(포멧팅, 문자열 함수).md
+++ b/Microbit/GPT+Microbit/07.문자열(포멧팅, 문자열 함수).md
@@ -150,7 +150,6 @@ display.scroll("{}".format(uppercase_input))
 8.추가 요청 사항_01:
 9.추가 요청 사항_02:
 ```
-
   - 본 챕터에서 사용할 GPT프롬프트 템플릿(정교하게 수정)
 ```
 1.코드 언어:
@@ -164,7 +163,5 @@ display.scroll("{}".format(uppercase_input))
 9.파이썬 코드 설계 수준:
 10.추가 요청 사항:
 ```
-
-
-```
-```
+  - GPT 프롬프트 템플릿 입력 내용
+  - GPT생성 코드
