Update 07.문자열(포멧팅, 문자열 함수).md

--- a/Microbit/GPT+Microbit/07.문자열(포멧팅, 문자열 함수).md
+++ b/Microbit/GPT+Microbit/07.문자열(포멧팅, 문자열 함수).md
@@ -154,7 +154,7 @@ display.scroll("{}".format(uppercase_input))
     ```
     1.코드 언어:
     2.사용할 파이썬 문법:
-    3.파이썬으로 컨트롤 할 MPU:
+    3.파이썬으로 컨트롤 할 오픈소스 하드웨어:
     4.코드 설계 시 사용할 마이크로비트 라이브러리 함수:
     5.코드 플래싱 시 마이크로 비트 최종 작동 모습:
     6.학습한 파이썬 문법:
