--- a/Microbit/GPT+Microbit/07.문자열(포멧팅, 문자열 함수).md
+++ b/Microbit/GPT+Microbit/07.문자열(포멧팅, 문자열 함수).md
@@ -153,15 +153,17 @@ display.scroll("{}".format(uppercase_input))
   - 본 챕터에서 사용할 GPT프롬프트 템플릿(정교하게 수정)
     ```
     1.코드 언어:
-    2.사용할 파이썬 문법:
-    3.파이썬으로 컨트롤 할 오픈소스 하드웨어:
-    4.코드 설계 시 사용할 마이크로비트 라이브러리 함수:
-    5.코드 플래싱 시 마이크로 비트 최종 작동 모습:
-    6.학습한 파이썬 문법:
-    7.학습하지  않은 파이썬 문법
-    8.코드 설계 시 참고 할 샘플 코드:
-    9.파이썬 코드 설계 수준:
-    10.추가 요청 사항:
+    2.파이썬으로 컨트롤 할 오픈소스 하드웨어:
+    3.코드 설계 시 사용할 마이크로비트 라이브러리 함수:
+    4.학습한 파이썬 문법:
+    5.학습하지  않은 파이썬 문법:
+    6.마이크로 비트 최종 작동 모습:
+    7.파이썬 코드 설계 수준:
+    8.추가 요청 사항:
+    9.코드 설계 시 참고 할 샘플 코드:
     ```
   - GPT 프롬프트 템플릿 입력 내용
+    ```
+    
+    ```
   - GPT생성 코드
