Update 18.다양한 코드 문법 활용실습.md

--- a/Microbit/GPT+Microbit/18.다양한 코드 문법 활용실습.md
+++ b/Microbit/GPT+Microbit/18.다양한 코드 문법 활용실습.md
@@ -1,33 +1,61 @@
 # 다양한 코드 문법 활용 실습 파트 코드
 ## 배우기 샘플코드
-*샘플코드_01
+* 샘플코드_01
 ```
 ```
 
-*샘플코드_02
+* 샘플코드_02
 ```
 ```
 
-*샘플코드_03
+* 샘플코드_03
 ```
 ```
 
-*샘플코드_04
+* 샘플코드_04
 ```
 ```
 
-*샘플코드_05
+* 샘플코드_05
 ```
 ```
 
-*샘플코드_06
+* 샘플코드_06
 ```
+#스탑워치 코드
+from microbit import *
+import time
+
+# 스탑워치 시작 시간
+start_time = 0
+# 스탑워치 동작 여부
+running = False
+
+while True:
+    if button_a.was_pressed():
+        if running:
+            running = False
+        else:
+            running = True
+            start_time = time.ticks_ms()  # 현재 시간을 밀리초로 저장
+    elif button_b.was_pressed():
+        running = False
+
+    if running:
+        current_time = time.ticks_diff(time.ticks_ms(), start_time)  # 경과 시간 계산
+        seconds = current_time // 1000  # 밀리초를 초로 변환
+        display.show(str(seconds))
+        sleep(1000)
+
+    if not running:
+        display.clear()
+
 ```
 
 
 *샘플코드_07
-*z축 가속도를 읽어오는 코드
 ```
+#z축 가속도를 읽어오는 코드
 from microbit import *
 
 def map(value, fromMin, fromMax, toMin, toMax):
