Update 18.다양한 코드 문법 활용실습.md

--- a/Microbit/GPT+Microbit/18.다양한 코드 문법 활용실습.md
+++ b/Microbit/GPT+Microbit/18.다양한 코드 문법 활용실습.md
@@ -1,5 +1,5 @@
 # 다양한 코드 문법 활용 실습 파트 코드
-## 배우기 샘플코드
+## 마빗으로 이것 저것 만들기!
 * 샘플코드_01
 ```
 ```
@@ -20,9 +20,8 @@
 ```
 ```
 
-* 샘플코드_06
+* 샘플코드_06: 스탑워치 코드
 ```
-#스탑워치 코드
 from microbit import *
 import time
 
@@ -53,9 +52,8 @@ while True:
 ```
 
 
-*샘플코드_07
+*샘플코드_07: z축 가속도를 읽어오는 코드
 ```
-#z축 가속도를 읽어오는 코드
 from microbit import *
 
 def map(value, fromMin, fromMax, toMin, toMax):
