Update 07.문자열(포멧팅, 문자열 함수).md

--- a/Microbit/GPT+Microbit/07.문자열(포멧팅, 문자열 함수).md
+++ b/Microbit/GPT+Microbit/07.문자열(포멧팅, 문자열 함수).md
@@ -164,6 +164,50 @@ display.scroll("{}".format(uppercase_input))
     ```
   - GPT 프롬프트 템플릿 입력 내용
     ```
+    1.코드 언어: Python
+    2.파이썬으로 컨트롤 할 오픈소스 하드웨어: 마이크로비트 (Microbit)
+    3.코드 설계 시 사용할 마이크로비트 라이브러리 함수: Microbit
+    4.학습한 파이썬 문법: 연산, 변수, 입출력, 연산자, 문자열 인덱싱 및 슬라이싱, 문자열 포맷팅
+    5.학습하지 않은 파이썬 문법: if, for, while, list, 함수, 모듈, 클래스
+    6.마이크로비트 최종 작동 모습: A버튼으로 스탑워치 시작, B버튼으로 스탑, 디스플레이에 경과 시간(초) 표시, 시리얼창에 시간 결과 출력
+    7.파이썬 코드 설계 수준: 중급 (중학생 수준)
+    8.추가 요청 사항: 마이크로비트의 버튼, 디스플레이, 사운드 기능 활용
+    9.코드 설계 시 참고 할 샘플 코드:
+    from microbit import *
     
+    name = "Microbit"
+    age = 5
+    
+    message = "Hello, I'm %s and I'm %d years old!" % (name, age)
+    print(message)
+    
+    while True:
+        display.scroll(message)
+        sleep(2000)
     ```
   - GPT생성 코드
+    ```
+    from microbit import *
+    import time
+    
+    running = False
+    start_time = 0
+    
+    while True:
+        if button_a.was_pressed():
+            running = not running  # 스탑워치 상태를 변경하여 시작 또는 중지
+            if running:
+                start_time = running_time()
+        
+        if button_b.was_pressed():
+            running = False
+    
+        if running:
+            current_time = time.ticks_diff(running_time(), start_time)  # 경과 시간 계산
+            seconds = current_time // 1000
+            display.show(str(seconds))
+            print("Elapsed Time: {} seconds".format(seconds))  # 시간을 문자열 포맷팅을 사용하여 출력
+    
+        sleep(1000)  # 1초마다 체크
+
+    ```
