Update 07.문자열(포멧팅, 문자열 함수).md

--- a/Microbit/GPT+Microbit/07.문자열(포멧팅, 문자열 함수).md
+++ b/Microbit/GPT+Microbit/07.문자열(포멧팅, 문자열 함수).md
@@ -187,6 +187,8 @@ display.scroll("{}".format(uppercase_input))
     ```
   - GPT생성 코드
     ```
+    #GPT가 출력한 코드가 원하지 않는 코드이면, 대화를 통하여 수정하는 방법 설명
+    
     from microbit import *
     import time
     
