--- a/Microbit/GPT+Microbit/10.for문 기초.md
+++ b/Microbit/GPT+Microbit/10.for문 기초.md
@@ -1,31 +1,43 @@
 # for문 기초 파트 코드
 ## 배우기 샘플코드
-*샘플코드_01
+### 실습제목입력
+* 샘플코드_01
+```
+```
+### 실습제목입력
+* 샘플코드_02
 ```
 ```
 
-*샘플코드_02
-```
-```
-
-*샘플코드_03
+### 실습제목입력
+* 샘플코드_03
 ```
 ```
 
 ## 이해하기 샘플코드
-*샘플코드_01
+* 샘플코드_01
 ```
 ```
 
-*샘플코드_02
+* 샘플코드_02
 ```
 ```
 
-*샘플코드_03
+* 샘플코드_03
 ```
 ```
 
 ## 적용하기 샘플코드
-*샘플코드_01
-```
-```
+* 샘플코드_01
+  - GPT프롬프트 템플릿
+    ```
+  
+    ```
+  - GPT 프롬프트 템플릿 입력 내용
+    ```
+   
+    ```
+  - GPT생성 코드
+    ```
+   
+    ```
