--- a/Microbit/GPT+Microbit/08.if문 기초.md
+++ b/Microbit/GPT+Microbit/08.if문 기초.md
@@ -1,8 +1,20 @@
 # if문 기초 파트 코드
 ## 배우기 샘플코드
-### 실습제목입력
+### if문(조건식 구문) 기초
 * 샘플코드_01
 ```
+from microbit import *
+
+score = 5 # score변수 값을 변경하여 출력을 확인해 보자
+ 
+if score < 2:
+    display.show(Image.SAD)
+elif score < 6:
+    display.show(Image.MEH)
+elif score < 10:
+    display.show(Image.ANGRY)
+else:
+    display.show(Image.HAPPY)
 ```
 ### 실습제목입력
 * 샘플코드_02
@@ -17,6 +29,8 @@
 ## 이해하기 샘플코드
 * 샘플코드_01
 ```
+#if, elif, else를 활요하여 점수 판별기 코드 만들기
+
 ```
 
 * 샘플코드_02
