--- a/Microbit/GPT+Microbit/08.if문 기초.md
+++ b/Microbit/GPT+Microbit/08.if문 기초.md
@@ -30,7 +30,28 @@ else:
 * 샘플코드_01
 ```
 #if, elif, else를 활요하여 점수 판별기 코드 만들기
+from microbit import *
+import music
 
+
+print('10점 만점의 시험입니다.점수 판별기에서 합격, 재시험, 불합격을 확인 할 수 있습니다.')
+score = int(input('학생의 점수를 입력해주세요:')) # score변수 값을 변경하여 출력을 확인해 보자
+ 
+if score < 3:
+    display.show(Image.SAD)
+    music.play(music.WAWAWAWAA)
+    print('불합격 입니다.')
+elif score < 7:
+    display.show(Image.ANGRY)
+    music.play(music.POWER_DOWN)
+    print('재시험 입니다.')
+elif score < 11:
+    display.show(Image.ANGRY)
+    music.play(music.POWER_UP)
+    print('합격 입니다.')
+else:
+    display.show(Image.HAPPY)
+    print('입력 점수 범위를 벗어났습니다.')
 ```
 
 * 샘플코드_02
