--- a/Microbit/GPT+Microbit/01.변수의 이해.md
+++ b/Microbit/GPT+Microbit/01.변수의 이해.md
@@ -23,7 +23,7 @@ pattern = Image('05050:'
 display.show(pattern)
 ```
 
-### 전면 25개 LED 제어하기(0~9값 활용)
+### 온도센서 활용하여 LED에 출력하기
 * 샘플코드_03
 ```
 from microbit import *
