--- a/Microbit/GPT+Microbit/08.if문 기초.md
+++ b/Microbit/GPT+Microbit/08.if문 기초.md
@@ -16,12 +16,41 @@ elif score < 10:
 else:
     display.show(Image.HAPPY)
 ```
-### 실습제목입력
+### 비교 연산자 활용 if문 코드
 * 샘플코드_02
 ```
+#참조-논리 부분에 있는 '비교 연산자'활용 전체 코드
+#동일, 미만, 초과, 이하, 이상, 동일하지 않음 6가지 예제가 있음
+from microbit import *
+
+number = int(input('숫자 입력:'))
+if number == 5: #1번 if문
+    print('Num is 5')
+    display.scroll('Num is 5')
+
+if number < 5: #2번 if문
+    print('Num is less than 5')
+    display.scroll('Num is less than 5')
+
+if number > 5: #3번 if문
+    print('Num is greater than 5')
+    display.scroll('Num is greater than 5')
+
+if number <= 5: #4번 if문
+    print('Num is less than or equal to 5')
+    display.scroll('Num is less than or equal to 5')
+
+if number >= 5: #5번 if문
+    print('Num is greater than or equal to 5')
+    display.scroll('Num is greater than or equal to 5')
+
+if number != 5: #6번 if문
+    print('Num is not equal to 5')
+    display.scroll('Num is not equal to 5')
+
 ```
 
-### 실습제목입력
+### 논리 연산자를 활용하여 버튼 컨트롤 하기
 * 샘플코드_03
 ```
 ```
@@ -29,7 +58,7 @@ else:
 ## 이해하기 샘플코드
 * 샘플코드_01
 ```
-#if, elif, else를 활요하여 점수 판별기 코드 만들기
+#if, elif, else를 활용하여 점수 판별기 코드 만들기
 from microbit import *
 import music
 
