--- a/Microbit/GPT+Microbit/08.if문 기초.md
+++ b/Microbit/GPT+Microbit/08.if문 기초.md
@@ -53,6 +53,23 @@ if number != 5: #6번 if문
 ### 논리 연산자를 활용하여 버튼 컨트롤 하기
 * 샘플코드_03
 ```
+from microbit import *
+while True:
+    if button_a.is_pressed() and button_b.is_pressed():
+        display.scroll('A+B')
+    sleep(200)
+    
+    elif button_a.is_pressed() or button_b.is_pressed():
+        display.scroll('A or B')
+    sleep(200)
+    
+    elif button_a.is_pressed() and not button_b.is_pressed():
+        display.scroll('A & not B')
+    sleep(200)
+
+    elif not button_a.is_pressed() and not button_b.is_pressed():
+        display.scroll('not A & not B') #이 조건은 두 개의 버튼이 모두 눌리지 않은 상태이기 때문에, 마이크로 비트가 그대로 있는 상태라 할 수 있다.
+    sleep(200)
 ```
 
 ## 이해하기 샘플코드
@@ -85,10 +102,12 @@ else:
 
 * 샘플코드_02
 ```
+
 ```
 
 * 샘플코드_03
 ```
+
 ```
 
 ## 적용하기 샘플코드
