--- a/Microbit/GPT+Microbit/08.if문 기초.md
+++ b/Microbit/GPT+Microbit/08.if문 기초.md
@@ -102,7 +102,22 @@ else:
 
 * 샘플코드_02
 ```
+from microbit import *
 
+while True:
+    lv = microphone.sound_level()
+    if 0 <= lv <70:
+        print('sound_level:{}, silent'.format(lv))
+        sleep(1000)
+    elif 70 <= lv <125:
+        print('sound_level:{}, quiet'.format(lv))
+        sleep(1000)
+    elif 125 <= lv <190:
+        print('sound_level:{}, noise'.format(lv))
+        sleep(1000)
+    elif 190 <= lv <255:
+        print('sound_level:{}, too loud'.format(lv))
+        sleep(1000)
 ```
 
 * 샘플코드_03
