--- a/Microbit/GPT+Microbit/08.if문 기초.md
+++ b/Microbit/GPT+Microbit/08.if문 기초.md
@@ -122,7 +122,27 @@ while True:
 
 * 샘플코드_03
 ```
+from microbit import *
 
+while True:
+    light_lv = display.read_light_level() #조도값 범위: 0-255
+    if button_a.was_pressed() and button_b.was_pressed():
+        print('현재 조도 값은 {}입니다.'.format(light_lv))
+        display.scroll('lgth_lv: {}.'.format(light_lv))
+        sleep(1000)
+    
+    elif pin_logo.is_touched():
+        print('낮인지 밤인지 판단 중입니다.')
+        display.scroll('Determining day and night')
+        sleep(1000)
+    elif light_lv >= 0 and light_lv < 100:
+        print('현재는 밤 입니다.')
+        display.scroll('nighttime')
+        sleep(1000)
+    elif light_lv >= 100 and light_lv <= 255:
+        print('현재는 낮 입니다.')
+        display.scroll('Daytime')
+        sleep(1000)
 ```
 
 ## 적용하기 샘플코드
