--- a/Microbit/GPT+Microbit/08.if문 기초.md
+++ b/Microbit/GPT+Microbit/08.if문 기초.md
@@ -25,27 +25,27 @@ from microbit import *
 
 number = int(input('숫자 입력:'))
 if number == 5: #1번 if문
-    print('Num is 5')
+    print('숫자는 5 입니다.')
     display.scroll('Num is 5')
 
 if number < 5: #2번 if문
-    print('Num is less than 5')
+    print('숫자가 5 보다 작습니다.')
     display.scroll('Num is less than 5')
 
 if number > 5: #3번 if문
-    print('Num is greater than 5')
+    print('숫자가 5 보다 큽니다.')
     display.scroll('Num is greater than 5')
 
 if number <= 5: #4번 if문
-    print('Num is less than or equal to 5')
+    print('숫자가 5 보다 작거나 같습니다.')
     display.scroll('Num is less than or equal to 5')
 
 if number >= 5: #5번 if문
-    print('Num is greater than or equal to 5')
+    print('숫자가 5 보다 크거나 같습니다.')
     display.scroll('Num is greater than or equal to 5')
 
 if number != 5: #6번 if문
-    print('Num is not equal to 5')
+    print('숫자는 5와 같지 않습니다.')
     display.scroll('Num is not equal to 5')
 
 ```
