--- a/Microbit/GPT+Microbit/08.if문 기초.md
+++ b/Microbit/GPT+Microbit/08.if문 기초.md
@@ -146,6 +146,23 @@ while True:
 ```
 
 ## 적용하기 샘플코드
+* 커스텀 인스트럭션 작성하기
+  - What would you like ChatGPT to know about you to provide better reponsess?
+    ```
+    Where are you based?
+    What do you do for work?
+    What are you hobbies and intersts?
+    What subjects can you tlak about for hours?
+    What are some goals you have?
+    ```
+  - How would you like ChatGPT to respond?
+    ```
+    How formal or casual should Chat GPT be?
+    How long or short should responses generally be?
+    How do you want to be addressed?
+    Should ChatGPT have opinions on topics or remain neutral?
+    ```
+
 * 샘플코드_01
   - GPT프롬프트 템플릿
     ```
