--- a/Microbit/GPT+Microbit/08.if문 기초.md
+++ b/Microbit/GPT+Microbit/08.if문 기초.md
@@ -147,20 +147,39 @@ while True:
 
 ## 적용하기 샘플코드
 * 커스텀 인스트럭션 작성하기
-  - What would you like ChatGPT to know about you to provide better reponsess?
+* [런모어 질문] Chat GPT기능 중 '커스텀 인스트럭션(Custom instruction)' 기능이 무엇입니까?
+* [런모어 질문] Chat GPT기능의 커스텀 인스트럭션(Custom instruction)은 어떻게 작성해야 합니까?
+  - [Custom instruction 작성 1번 내용] What would you like ChatGPT to know about you to provide better reponsess?
     ```
+    #Open AI에서 추천하는 작성 질문
     Where are you based?
     What do you do for work?
     What are you hobbies and intersts?
     What subjects can you tlak about for hours?
     What are some goals you have?
     ```
-  - How would you like ChatGPT to respond?
+  - GPT 4.0이 설명한 커스텀 인스트럭션 1번 작성법 기본 내용
     ```
+    위치 (Where are you based?): 사용자의 지리적 위치는 문화적 참조, 시간대 관련 정보, 지역적 특성 등에 대한 맞춤형 대답을 제공하는 데 도움이 됩니다.
+    직업 (What do you do for work?): 사용자의 직업이나 업무 분야에 대한 정보는 관련된 전문적인 조언이나 업무 관련 정보를 제공하는 데 유용합니다.
+    취미와 관심사 (What are your hobbies and interests?): 사용자의 취미와 관심사를 아는 것은 개인화된 추천, 취미 관련 정보, 관심사에 맞는 대화를 제공하는 데 도움이 됩니다.
+    관심 주제 (What subjects can you talk about for hours?): 사용자가 시간을 들여 이야기할 수 있는 주제에 대한 정보는 대화의 방향을 결정하고, 사용자의 열정을 반영하는 내용을 제공하는 데 중요합니다.
+    목표 (What are some goals you have?): 사용자의 개인적이거나 전문적인 목표를 알면, 이에 대한 조언, 동기 부여, 관련 정보 제공 등에 도움이 됩니다.
+    ```
+  - [Custom instruction 작성 2번 내용]How would you like ChatGPT to respond?
+    ```
+     #Open AI에서 추천하는 작성 질문
     How formal or casual should Chat GPT be?
     How long or short should responses generally be?
     How do you want to be addressed?
     Should ChatGPT have opinions on topics or remain neutral?
+    ```
+  - GPT 4.0이 설명한 커스텀 인스트럭션 1번 작성법 기본 내용
+    ```
+    공식적인 혹은 캐주얼함 (How formal or casual should Chat GPT be?): 사용자가 선호하는 대화의 정도에 따라, ChatGPT는 보다 공식적이거나 비공식적인 톤으로 응답할 수 있습니다. 예를 들어, 비즈니스 관련 질문이나 학술적인 대화에서는 보다 공식적인 톤이, 일상적인 대화나 친근한 주제에서는 비공식적인 톤이 적합할 수 있습니다.
+    응답 길이 (How long or short should responses generally be?): 사용자가 선호하는 응답의 길이는 다를 수 있으며, 이에 따라 ChatGPT는 간결하거나 상세한 답변을 제공할 수 있습니다. 사용자의 시간이나 관심사에 따라 짧고 요점을 간단히 설명하는 응답이나, 보다 상세하고 깊이 있는 설명이 필요할 수 있습니다.
+    호칭 방식 (How do you want to be addressed?): 사용자가 어떻게 호칭되기를 원하는지에 대한 정보는 대화의 개인화에 도움을 줍니다. 예를 들어, 이름, 별명, 직함 등 사용자가 선호하는 호칭을 사용함으로써 보다 친근하고 존중하는 대화가 가능합니다.
+    의견 표현 여부 (Should ChatGPT have opinions on topics or remain neutral?): 일부 사용자는 ChatGPT가 특정 주제에 대해 의견을 제시하는 것을 선호할 수 있으며, 다른 사용자는 중립적인 정보 제공을 선호할 수 있습니다. 이에 대한 사용자의 선호도에 따라 ChatGPT는 의견을 제시하거나 중립적인 입장을 취할 수 있습니다.
     ```
 
 * 샘플코드_01
