--- a/Microbit/GPT+Microbit/08.if문 기초.md
+++ b/Microbit/GPT+Microbit/08.if문 기초.md
@@ -174,14 +174,30 @@ while True:
     How do you want to be addressed?
     Should ChatGPT have opinions on topics or remain neutral?
     ```
-  - GPT 4.0이 설명한 커스텀 인스트럭션 1번 작성법 기본 내용
+  - GPT 4.0이 설명한 커스텀 인스트럭션 2번 작성법 기본 내용
     ```
     공식적인 혹은 캐주얼함 (How formal or casual should Chat GPT be?): 사용자가 선호하는 대화의 정도에 따라, ChatGPT는 보다 공식적이거나 비공식적인 톤으로 응답할 수 있습니다. 예를 들어, 비즈니스 관련 질문이나 학술적인 대화에서는 보다 공식적인 톤이, 일상적인 대화나 친근한 주제에서는 비공식적인 톤이 적합할 수 있습니다.
     응답 길이 (How long or short should responses generally be?): 사용자가 선호하는 응답의 길이는 다를 수 있으며, 이에 따라 ChatGPT는 간결하거나 상세한 답변을 제공할 수 있습니다. 사용자의 시간이나 관심사에 따라 짧고 요점을 간단히 설명하는 응답이나, 보다 상세하고 깊이 있는 설명이 필요할 수 있습니다.
     호칭 방식 (How do you want to be addressed?): 사용자가 어떻게 호칭되기를 원하는지에 대한 정보는 대화의 개인화에 도움을 줍니다. 예를 들어, 이름, 별명, 직함 등 사용자가 선호하는 호칭을 사용함으로써 보다 친근하고 존중하는 대화가 가능합니다.
     의견 표현 여부 (Should ChatGPT have opinions on topics or remain neutral?): 일부 사용자는 ChatGPT가 특정 주제에 대해 의견을 제시하는 것을 선호할 수 있으며, 다른 사용자는 중립적인 정보 제공을 선호할 수 있습니다. 이에 대한 사용자의 선호도에 따라 ChatGPT는 의견을 제시하거나 중립적인 입장을 취할 수 있습니다.
     ```
-
+  - 마이크로 비트를 파이썬으로 다루기 위한 '학습자'의 커스텀 인스트럭션 추천 질문
+    ```
+    배경 정보 관련 질문:
+    위치 (Where are you based?): 마이크로비트를 사용할 수 있는 국가나 지역 정보가 있습니까?
+    직업 (What do you do for work?): 교육자이신가요, 아니면 학생 또는 취미로 프로그래밍을 배우고 계신가요?
+    취미와 관심사 (What are your hobbies and interests?): 프로그래밍 외에 다른 기술적인 취미나 관심사가 있으신가요?
+    관심 주제 (What subjects can you talk about for hours?): 프로그래밍, 전자공학, 컴퓨터 과학 등 어떤 분야에 특히 관심이 많으신가요?
+    목표 (What are some goals you have?): 마이크로비트를 사용하여 어떤 프로젝트나 목표를 달
+    성하고자 하시나요?
+    
+    선호도 정보 관련 질문:
+    폼말함 혹은 친근함 (How formal or casual should Chat GPT be?): 마이크로비트와 파이썬 관련 정보를 제공할 때, 공식적이고 학술적인 스타일을 선호하시나요, 아니면 친근하고 대화형 스타일을 선호하시나요?
+    응답 길이 (How long or short should responses generally be?): 마이크로비트와 파이썬에 대한 설명을 간결하게 요약해 드릴까요, 아니면 상세하고 자세한 설명을 원하시나요?
+    호칭 방식 (How do you want to be addressed?): 어떤 호칭을 선호하시나요? 예를 들어, 이름, 별명, 또는 존칭 등을 사용해 드릴까요?
+    의견 표현 여부 (Should ChatGPT have opinions on topics or remain neutral?): 마이크로비트와 파이썬에 대해 중립적인 정보만을 제공하기를 원하시나요, 아니면 특정 주제에 대한 제 개인적인 의견이나 추천도 듣고 싶으신가요?
+    이러한 질문들을 통해 마이크로비트를 파이썬으로 제어하는 학습 활동에 대한 맞춤형 조언과 정보를 제공할 수 있습니다. 사용자의 배경과 선호도에 따라, 더 효과적이고 만족스러운 학습 경험을 제공하는 데 도움이 됩니다.
+    ``` 
 * 샘플코드_01
   - GPT프롬프트 템플릿
     ```
