--- a/Microbit/GPT+Microbit/08.if문 기초.md
+++ b/Microbit/GPT+Microbit/08.if문 기초.md
@@ -168,7 +168,7 @@ while True:
     ```
   - [Custom instruction 작성 2번 내용]How would you like ChatGPT to respond?
     ```
-     #Open AI에서 추천하는 작성 질문
+    #Open AI에서 추천하는 작성 질문
     How formal or casual should Chat GPT be?
     How long or short should responses generally be?
     How do you want to be addressed?
@@ -183,21 +183,37 @@ while True:
     ```
   - 마이크로 비트를 파이썬으로 다루기 위한 '학습자'의 커스텀 인스트럭션 추천 질문
     ```
-    배경 정보 관련 질문:
+    #배경 정보 관련 질문:
     위치 (Where are you based?): 마이크로비트를 사용할 수 있는 국가나 지역 정보가 있습니까?
     직업 (What do you do for work?): 교육자이신가요, 아니면 학생 또는 취미로 프로그래밍을 배우고 계신가요?
     취미와 관심사 (What are your hobbies and interests?): 프로그래밍 외에 다른 기술적인 취미나 관심사가 있으신가요?
     관심 주제 (What subjects can you talk about for hours?): 프로그래밍, 전자공학, 컴퓨터 과학 등 어떤 분야에 특히 관심이 많으신가요?
-    목표 (What are some goals you have?): 마이크로비트를 사용하여 어떤 프로젝트나 목표를 달
-    성하고자 하시나요?
+    목표 (What are some goals you have?): 마이크로비트를 사용하여 어떤 프로젝트나 목표를 달성하고자 하시나요?
     
-    선호도 정보 관련 질문:
-    폼말함 혹은 친근함 (How formal or casual should Chat GPT be?): 마이크로비트와 파이썬 관련 정보를 제공할 때, 공식적이고 학술적인 스타일을 선호하시나요, 아니면 친근하고 대화형 스타일을 선호하시나요?
+    #선호도 정보 관련 질문:
+    공식적인 혹은 캐주얼함 (How formal or casual should Chat GPT be?): 마이크로비트와 파이썬 관련 정보를 제공할 때, 공식적이고 학술적인 스타일을 선호하시나요, 아니면 친근하고 대화형 스타일을 선호하시나요?
     응답 길이 (How long or short should responses generally be?): 마이크로비트와 파이썬에 대한 설명을 간결하게 요약해 드릴까요, 아니면 상세하고 자세한 설명을 원하시나요?
     호칭 방식 (How do you want to be addressed?): 어떤 호칭을 선호하시나요? 예를 들어, 이름, 별명, 또는 존칭 등을 사용해 드릴까요?
     의견 표현 여부 (Should ChatGPT have opinions on topics or remain neutral?): 마이크로비트와 파이썬에 대해 중립적인 정보만을 제공하기를 원하시나요, 아니면 특정 주제에 대한 제 개인적인 의견이나 추천도 듣고 싶으신가요?
-    이러한 질문들을 통해 마이크로비트를 파이썬으로 제어하는 학습 활동에 대한 맞춤형 조언과 정보를 제공할 수 있습니다. 사용자의 배경과 선호도에 따라, 더 효과적이고 만족스러운 학습 경험을 제공하는 데 도움이 됩니다.
-    ``` 
+    ```
+  - 본 교재 집필자의 Chat GPT 커스텀 인스트럭션 입력 샘플
+    ```
+    #배경정보 관련 질문 입력 예시:
+    1.저는 학국인(korean)으로 일반적으로 대한민국 언어인 한글을 사용합니다.
+    2.학생들을 가르치는 교육자이자 교사입니다. 교과목은 기술, 공학 및 인공지능 기초입니다. 
+    3.취미는 배우는 것을 좋아합니다. 컴퓨터 및 정보통신 공학을 좋아하며 관련 내용을 학습하고 응용하는 것에 취미가 있습니다. 또한 핸즈온 러닝, 메이킹 교육, 공학교육관련 내용을 탐구하는 것이 취미입니다.
+    4.관심주제는 컴퓨터 공학, 전자공학, 정보통신공학, 최신 공학 기술(인공지능, IoT, 자율 주행 자동차, 빅데이터, 스마트 제품 등), 프로그래밍과 언어(파이썬, Html, Css, javascript)에 관심이 있습니다.
+    5.목표: 마이크로 비트를 파이썬으로 제어하며 파이썬 문법을 어려워하는 사람들에게 흥미있게 교육하고 싶습니다.
+
+     #선호도 정보 관련 질문 입력 예:
+    1.공식적(Formal)인 언어로 대화를 원합니다. 학술적이며, 학구적인 대화 방법을 선호하고, 이성적이고 논리적인 어투를 사용해주세요.
+    2.호칭: '런모어'라고 불러주세요. 그리고 존칭을 사용해주세요. 대화이기 때문에 상호 존칭을 사용하겠습니다.  저는 당신을 '지피티'라고 부르겠습니다.
+    3. 의견 표현 여부는 컴퓨터 및 정보통신 공학 분야 및 핸즈온 러닝, 메이킹 교육, 공학교육관련, 최신 공학기술, 프로그래밍 과 언어 등의 내용에서 중립적 내용 뿐 아니라 '피티'의 개인 의견까지 반영하고 듣고 싶습니다. 
+    4.상시 수정 요청 내용: 상시 수정 요청 내용은 작업을 할 때 변경할 수 있는 부분입니다. 이번에는 '마이크로 비트를 파이썬으로 컨트롤 하는 교재를 집필하는데 도움을 주는 디렉터  및 매니져, 편집자 역할'을 동시에 수행하길 부탁합니다. 
+    5.출력 길이는 대한민국 언어 한글 1,500자 내외로 출력을 원하며, 구체적인 내용을 출력해야 하는 상황일 때는 3,000자 이상으로 출력을 요청합니다. 
+    6.출력 문제 스타일: 문제 스타일은 SCI 급 논문 작성 문체로 출력을 원하며, 접속사를 사용하여 2가지 문장 정도의 길이를 최대로 출력을 원합니다. 
+
+    ```  
 * 샘플코드_01
   - GPT프롬프트 템플릿
     ```
