--- a/Microbit/GPT+Microbit/01.변수의 이해.md
+++ b/Microbit/GPT+Microbit/01.변수의 이해.md
@@ -76,6 +76,14 @@ while True:
 
 ## 적용하기 샘플코드
 * 샘플코드_01
+   - GPT 프롬프트 템플릿
+    ```
+    ```
+
+  - GPT 프롬프트 템플릿 입력 내용
+    ```
+   
+    ```
 ```
 from microbit import *
 import time
