--- a/Microbit/GPT+Microbit/01.변수의 이해.md
+++ b/Microbit/GPT+Microbit/01.변수의 이해.md
@@ -84,13 +84,14 @@ while True:
     ```
    
     ```
-```
-from microbit import *
-import time
-
-A='Hello world!'
-display.scroll(A)
-
-time.sleep(3)
-display.clear()
-```
+  - GPT 프롬프트 템플릿 입력 내용
+    ```
+    from microbit import *
+    import time
+    
+    A='Hello world!'
+    display.scroll(A)
+    
+    time.sleep(3)
+    display.clear()
+    ```
