Update 02.입력과 출력, 함수의 이해.md

--- a/Microbit/GPT+Microbit/02.입력과 출력, 함수의 이해.md
+++ b/Microbit/GPT+Microbit/02.입력과 출력, 함수의 이해.md
@@ -80,17 +80,26 @@ while True:
 
 ## 적용하기 샘플코드
 * 샘플코드_01
-```
-from microbit import *
+   - GPT 프롬프트 템플릿
+    ```
+    ```
 
-word_A = input("Enter word A: ")
-word_B = input("Enter word B: ")
-
-while True:
-    display.show(word_A)
-    sleep(1000)
-    display.clear()
-    display.show(word_B)
-    sleep(1000)
-    display.clear()
-```
+  - GPT 프롬프트 템플릿 입력 내용
+    ```
+   
+    ```
+  - GPT 프롬프트 템플릿 입력 내용
+    ```
+    from microbit import *
+    
+    word_A = input("Enter word A: ")
+    word_B = input("Enter word B: ")
+    
+    while True:
+        display.show(word_A)
+        sleep(1000)
+        display.clear()
+        display.show(word_B)
+        sleep(1000)
+        display.clear()
+    ```
