--- a/Microbit/GPT+Microbit/03.자료형.md
+++ b/Microbit/GPT+Microbit/03.자료형.md
@@ -94,26 +94,35 @@ while True:
 
 ## 적용하기 샘플코드
 * 샘플코드_01
-```
-from microbit import *
-import music
-while True:
-    data = input('데이터 값을 입력하세요:')  
-    try:
-        data = eval(data) 
-        data_type = type(data).__name__  
-        display.scroll(data_type)  
-        # 데이터 유형에 따라 다른 소리 출력
-        if data_type == 'int':
-            music.play(music.POWER_UP)
-        elif data_type == 'str':
-            music.play(music.POWER_DOWN)
-        elif data_type == 'float':
-            music.play(music.JUMP_UP)
-        elif data_type == 'bool':
-            music.play(music.JUMP_DOWN)
-        else:
-            music.play(music.RINGTONE)
-    except Exception as e:
-        display.scroll('Error') 
-```
+   - GPT 프롬프트 템플릿
+    ```
+    ```
+
+  - GPT 프롬프트 템플릿 입력 내용
+    ```
+   
+    ```
+  - GPT 프롬프트 템플릿 입력 내용
+    ```
+    from microbit import *
+    import music
+    while True:
+        data = input('데이터 값을 입력하세요:')  
+        try:
+            data = eval(data) 
+            data_type = type(data).__name__  
+            display.scroll(data_type)  
+            # 데이터 유형에 따라 다른 소리 출력
+            if data_type == 'int':
+                music.play(music.POWER_UP)
+            elif data_type == 'str':
+                music.play(music.POWER_DOWN)
+            elif data_type == 'float':
+                music.play(music.JUMP_UP)
+            elif data_type == 'bool':
+                music.play(music.JUMP_DOWN)
+            else:
+                music.play(music.RINGTONE)
+        except Exception as e:
+            display.scroll('Error') 
+    ```
