--- a/Microbit/GPT+Microbit/04.연산자.md
+++ b/Microbit/GPT+Microbit/04.연산자.md
@@ -62,131 +62,40 @@ not_equal_result = num_01 != num_02
 
 # 결과를 출력합니다.
 display.scroll(str(equal_result))
-display.scroll(str(not_equal_result))
-
-# 할당 연산자를 사용하여 결과를 저장합니다.
-greater_result = num_01 > num_02
-less_result = num_01 < num_02
-greater_or_equal_result = num_01 >= num_02
-less_or_equal_result = num_01 <= num_02
-
-# 결과를 출력합니다.
-print(str(greater_result))
-print(str(less_result))
-print(str(greater_or_equal_result))
-print(str(less_or_equal_result))
-```
-
-## 이해하기 샘플코드
-### 샘플코드_01
-```
-from microbit import *
-
-num_01=int(input('첫 번째 숫자입력:'))
-num_02=int(input('두 번째 숫자입력:'))
-Add, Sub, Mul, Div = num_01+num_02, num_01-num_02, num_01*num_02, num_01/num_02
-
-Quo, Rem, Pow=num_01//num_02, num_01%num_02, num_01**num_02
-print(Add, Sub, Mul, Div)
-
-display.scroll(Add)
-display.scroll(Sub)
-display.scroll(Mul)
-display.scroll(Div)
-display.scroll(Quo)
-display.scroll(Rem)
-display.scroll(Pow)
-```
-
-### 샘플코드_02
-* 양음홀짝 판별 코드
-```
-from microbit import *
-
-num = int(input('숫자 입력:'))
-
-is_positive = num > 0  # 숫자가 양수인지 확인
-is_negative = num < 0 # 숫자가 음수인지 확인
-is_even = num % 2 == 0  # 숫자가 짝수인지 확인
-is_odd = num % 2 !=0 # 숫자가 홀수인지 확인
-
-# 결과 출력
-print(is_positive)
-print(is_negative)
-print(is_even)
-print(is_odd)
-```
-
-### 샘플코드_03
-```
-from microbit import *
-
-# 세 개의 숫자를 입력받습니다.
-num_01 = int(input('첫 번째 숫자 입력:'))
-num_02 = int(input('두 번째 숫자 입력:'))
-num_03 = int(input('세 번째 숫자 입력:'))
-
-# 대입 연산자를 사용하여 결과를 저장합니다.
-equal_result = num_01 == num_02 == num_03
-not_equal_result = num_01 != num_02 != num_03
-
-# 'and' 연산자를 사용하여 모든 조건을 비교합니다.
-greater_result = num_01 > num_02 and num_02 > num_03
-less_result = num_01 < num_02 and num_02 < num_03
-greater_or_equal_result = num_01 >= num_02 and num_02 >= num_03
-less_or_equal_result = num_01 <= num_02 and num_02 <= num_03
-
-# 마이크로 비트에 결과를 출력합니다.
-display.scroll(str(equal_result))
-display.scroll(str(not_equal_result))
-
-
-# 시리얼 모니터에 결과를 출력합니다.
-print(str(greater_result))
-print(str(less_result))
-print(str(greater_or_equal_result))
-print(str(less_or_equal_result))
-```
-
-## 적용하기 샘플코드
-### 마이크로 비트를 자유낙하 시켰을 때 떨어진 거리구하기
- * GPT 프롬프트 엔지니어링과 템플릿을 활용하여 정교한 코드 결과 출력 받기입니다.
- * 챕터 1,2에서 활용한 프롬프트 엔지니어링 패턴에서 마지막 ‘템플릿의 요소’를 추가하여 코드 설계를 정교하게 하겠습니다.
- * 아래 템플릿은 ‘사용하지 않는 파이썬 문법’이라는 요소를 템프릿으로 추가하였습니다.
- * 아직 배우지 않은 파이썬 문법이 나오지 않도록 컨트롤 할 것입니다. 
-```
-from microbit import *
-import time
-
-# 마이크로 비트를 수직으로 떨어트립니다.
-display.scroll("Drop Microbit")
-while accelerometer.was_gesture("shake") == False:
-    pass
-
-# 낙하 시작 시간 기록
-start_time = running_time()
-
-# 낙하 종료 시간까지 대기
-while accelerometer.was_gesture("shake") == True:
-    pass
-
-# 낙하 종료 시간 기록
-end_time = running_time()
-
-# 시간 간격 계산 (밀리초 단위)
-time_interval = end_time - start_time
-
-# 중력 가속도 (9.8 m/s^2)를 이용하여 거리 계산
-# 거리 = 1/2 * 중력 가속도 * 시간^2
-gravity = 9.8  # 중력 가속도 (m/s^2)
-time_seconds = time_interval / 1000  # 밀리초를 초로 변환
-distance = 0.5 * gravity * (time_seconds ** 2)
-
-# 마이크로 비트에 결과 출력
-display.scroll("Distance: ")
-display.scroll(str(round(distance, 2)) + " meters")
-
-# 시리얼 모니터에 결과 출력
-print("Distance: ")
-print(str(round(distance, 2)) + " meters")
-```
+display.scroll(str(not_equal_re용
+    ```
+    from microbit import *
+    import time
+    
+    # 마이크로 비트를 수직으로 떨어트립니다.
+    display.scroll("Drop Microbit")
+    while accelerometer.was_gesture("shake") == False:
+        pass
+    
+    # 낙하 시작 시간 기록
+    start_time = running_time()
+    
+    # 낙하 종료 시간까지 대기
+    while accelerometer.was_gesture("shake") == True:
+        pass
+    
+    # 낙하 종료 시간 기록
+    end_time = running_time()
+    
+    # 시간 간격 계산 (밀리초 단위)
+    time_interval = end_time - start_time
+    
+    # 중력 가속도 (9.8 m/s^2)를 이용하여 거리 계산
+    # 거리 = 1/2 * 중력 가속도 * 시간^2
+    gravity = 9.8  # 중력 가속도 (m/s^2)
+    time_seconds = time_interval / 1000  # 밀리초를 초로 변환
+    distance = 0.5 * gravity * (time_seconds ** 2)
+    
+    # 마이크로 비트에 결과 출력
+    display.scroll("Distance: ")
+    display.scroll(str(round(distance, 2)) + " meters")
+    
+    # 시리얼 모니터에 결과 출력
+    print("Distance: ")
+    print(str(round(distance, 2)) + " meters")
+    ```
