--- a/Microbit/GPT+Microbit/04.연산자.md
+++ b/Microbit/GPT+Microbit/04.연산자.md
@@ -48,11 +48,10 @@ print(num_01>=num_02)
 print(num_01>=num_02)
 ```
 
-### 비교 연산자 변수를 활용하여 출력하기
+### 대입 및 비교 연산자 변수를 활용하여 출력하기
 * 샘플코드_03 
 ```
 from microbit import *
-
 num_01 = int(input('첫 번째 숫자 입력:'))
 num_02 = int(input('두 번째 숫자 입력:'))
 
@@ -62,40 +61,17 @@ not_equal_result = num_01 != num_02
 
 # 결과를 출력합니다.
 display.scroll(str(equal_result))
-display.scroll(str(not_equal_re용
-    ```
-    from microbit import *
-    import time
-    
-    # 마이크로 비트를 수직으로 떨어트립니다.
-    display.scroll("Drop Microbit")
-    while accelerometer.was_gesture("shake") == False:
-        pass
-    
-    # 낙하 시작 시간 기록
-    start_time = running_time()
-    
-    # 낙하 종료 시간까지 대기
-    while accelerometer.was_gesture("shake") == True:
-        pass
-    
-    # 낙하 종료 시간 기록
-    end_time = running_time()
-    
-    # 시간 간격 계산 (밀리초 단위)
-    time_interval = end_time - start_time
-    
-    # 중력 가속도 (9.8 m/s^2)를 이용하여 거리 계산
-    # 거리 = 1/2 * 중력 가속도 * 시간^2
-    gravity = 9.8  # 중력 가속도 (m/s^2)
-    time_seconds = time_interval / 1000  # 밀리초를 초로 변환
-    distance = 0.5 * gravity * (time_seconds ** 2)
-    
-    # 마이크로 비트에 결과 출력
-    display.scroll("Distance: ")
-    display.scroll(str(round(distance, 2)) + " meters")
-    
-    # 시리얼 모니터에 결과 출력
-    print("Distance: ")
-    print(str(round(distance, 2)) + " meters")
-    ```
+display.scroll(str(not_equal_result))
+
+# 비교 연산자를 사용하여 결과를 저장합니다.
+greater_result = num_01 > num_02
+less_result = num_01 < num_02
+greater_or_equal_result = num_01 >= num_02
+less_or_equal_result = num_01 <= num_02
+
+# 결과를 출력합니다.
+print(str(greater_result))
+print(str(less_result))
+print(str(greater_or_equal_result))
+print(str(less_or_equal_result))
+```
