--- a/Microbit/GPT+Microbit/01.변수의 이해.md
+++ b/Microbit/GPT+Microbit/01.변수의 이해.md
@@ -78,11 +78,23 @@ while True:
 * 샘플코드_01
    - GPT 프롬프트 템플릿
     ```
+    다음과 같은 템플릿의 형태로 제시할 예정인데 수정이 가능한가요?
+    1.파이썬 코드=
+    2.수정요구사항=
+    3.추가요구사항=
     ```
 
   - GPT 프롬프트 템플릿 입력 내용
     ```
-   
+    1.파이썬 코드= 
+    from microbit import * 
+      
+    text = "Hello" 
+    display.scroll(text) 
+
+    2.수정요구사항=변수의 이름을 A로 수정, A변수의 인자값을 "Hello world"로 수정 
+
+    3. 추가요구사항=3초 뒤에 LED가 꺼지도록 코드 제시
     ```
   - GPT 생성 코드
     ```
