Update 02.입력과 출력, 함수의 이해.md

--- a/Microbit/GPT+Microbit/02.입력과 출력, 함수의 이해.md
+++ b/Microbit/GPT+Microbit/02.입력과 출력, 함수의 이해.md
@@ -82,11 +82,25 @@ while True:
 * 샘플코드_01
    - GPT 프롬프트 템플릿
     ```
+    다음과 같은 템플릿의 형태로 제시할 예정인데 수정이 가능한가요?
+    1.파이썬 코드=
+    2.수정요구사항=
+    3.첫번째 input()함수 변수명=4.두번째 input()함수 변수명=5.작동기능정리:
     ```
 
   - GPT 프롬프트 템플릿 입력 내용
     ```
-   
+    1.파이썬 코드:
+    from microbit import *
+    word_input=input("word:")
+    
+    while True:
+        display.scroll(word_input)
+        sleep(1000)
+    2.수정요구사항: input() 함수를 2번 사용하여 입력을 받음
+    3.첫번째 input()함수 변수명: word_A
+    4.두번째 input()함수 변수명: word_B
+    5.작동기능정리: word_A, word_B에 단어를 입력 받아서 LED에 1번 씩 나타나게 하고, 화면이 클리어되는 코드
     ```
   - GPT 생성 코드
     ```
