--- a/Microbit/GPT+Microbit/03.자료형.md
+++ b/Microbit/GPT+Microbit/03.자료형.md
@@ -96,13 +96,36 @@ while True:
 * 샘플코드_01
    - GPT 프롬프트 템플릿
     ```
+    템플릿을 제공하겠습니다.
+    1.코드 언어:
+    2.코드 설계 시 사용할 마이크로비트 라이브러리 함수:
+    3.포함되어 야할 파이썬 문법:
+    4.수정 할 샘플 코드:
+    5.추가 요청 사항:
+    6.코드 플래싱 시 마이크로 비트 최종 작동 모습:
     ```
 
   - GPT 프롬프트 템플릿 입력 내용
     ```
-   
+    1.코드 언어: 파이썬(python)
+    2.코드 설계 시 사용할 마이크로비트 라이브러리 함수:  music.play()
+    3.포함되어 야할 파이썬 문법: input(), type()
+    4.수정 할 샘플 코드:
+    var_01=1
+    var_02='1'
+    var_03=3.14
+    var_04=True
+    var_05=False
+    print(type(var_01))
+    print(type(var_02))
+    print(type(var_03))
+    print(type(var_04))
+    print(type(var_05))
+    5.추가 요청 사항: 시리얼 창에 값을 입력하면 데이터 타입의 종류에 따라 다른 소리가 나도록 설계, 여기서 시리얼 창은 마이크로 비트 파이선 에디터의 시리얼 창을 말하는 것이기에 시리얼 통신 라이브러리를 활용한 코드는 설계할 필요가 없음
+    6.코드 플래싱 시 마이크로 비트 최종 작동 모습: 코드 작동을 시켰을 때 시리얼 창에서 데이터 값을 받고, 각 자료형의 형태에 따라 다른 소리가 마이크로 비트에 출력되도록 작동하는 코드
     ```
-  - GPT 생성 코드
+
+   - GPT 생성 코드
     ```
     from microbit import *
     import music
