--- a/Microbit/GPT+Microbit/04.연산자.md
+++ b/Microbit/GPT+Microbit/04.연산자.md
@@ -147,16 +147,24 @@ print(str(less_or_equal_result))
 * 샘플코드_01
    - GPT 프롬프트 템플릿
     ```
+    수정하여 템플릿을 제공하겠습니다.
+    1.코드 언어:
+    2.코드 설계 시 사용할 마이크로비트 라이브러리 함수:
+    3.포함되어 야할 파이썬 문법:
+    4.수정 할 샘플 코드:
+    5.추가 요청 사항:
+    6.사용하지 않는 문법:
+    7.코드 플래싱 시 마이크로 비트 최종 작동 모습:
     ```
 
   - GPT 프롬프트 템플릿 입력 내용
     ```
-   
-    ```
-  - GPT 생성 코드
-    ```
+    1. 코드 언어: 파이썬(python)
+    2. 코드 설계 시 사용할 마이크로비트 라이브러리 함수: microbit, time
+    3. 포함되어 야할 파이썬 문법: 연산자(산술, 비교, 논리 연산자) 
+    4. 수정 할 샘플 코드: 
     from microbit import *
-
+    
     # 세 개의 숫자를 입력받습니다.
     num_01 = int(input('첫 번째 숫자 입력:'))
     num_02 = int(input('두 번째 숫자 입력:'))
@@ -182,4 +190,11 @@ print(str(less_or_equal_result))
     print(str(less_result))
     print(str(greater_or_equal_result))
     print(str(less_or_equal_result))
+    
+    5. 추가 요청 사항:  6번의 조건에 들어간 문법은 사용하지 않고 출력, 초등학생 2학년이 알 수 있을 정도의 실습.
+    6. 사용하지 않는 문법: while, if, for, def, 문자열 formating, 리스트 등
+    7. 코드 플래싱 시 마이크로 비트 최종 작동 모습: 마이크로 비트 '가속도'센서를 활용하여 마이크로 비트를 수직낙하 시켰을 때 낙하하는 시간을 계산하여 낙하거리를 측정하는 마이크로 비트 파이썬 코드 설계. 마이크로 비트를 떨어트리면 거리를 측정할 수 있도록 하는 실습.
+    ```
+  - GPT 생성 코드
+    ```
     ```
