--- a/Microbit/GPT+Microbit/04.연산자.md
+++ b/Microbit/GPT+Microbit/04.연산자.md
@@ -197,4 +197,27 @@ print(str(less_or_equal_result))
     ```
   - GPT 생성 코드
     ```
+    from microbit import *
+
+    # 마이크로비트 떨어뜨린 순간의 가속도 값을 측정합니다.
+    start_time = running_time()
+    while True:
+        acceleration = accelerometer.current_gesture()
+        if acceleration == "freefall":
+            break
+    
+    # 마이크로비트가 떨어진 시간을 계산합니다.
+    end_time = running_time()
+    fall_time_seconds = (end_time - start_time) / 1000  # 밀리초를 초로 변환
+    
+    # 중력 가속도를 상수로 정의합니다.
+    gravity = 9.81  # 중력 가속도 (m/s^2)
+    
+    # 낙하 거리를 계산합니다.
+    fall_distance = 0.5 * gravity * (fall_time_seconds ** 2)
+    
+    # 결과를 표시합니다.
+    display.scroll("Fall Time: {:.2f} s".format(fall_time_seconds))
+    display.scroll("Fall Distance: {:.2f} m".format(fall_distance))
+
     ```
