--- a/Microbit/GPT+Microbit/04.연산자.md
+++ b/Microbit/GPT+Microbit/04.연산자.md
@@ -198,17 +198,17 @@ print(str(less_or_equal_result))
   - GPT 생성 코드
     ```
     from microbit import *
-    accelerometer.current_gesture()
+    import utime
     
     # 마이크로비트 떨어뜨린 순간의 가속도 값을 측정합니다.
-    start_time = running_time()
+    start_time = utime.ticks_ms()
     while True:
         acceleration = accelerometer.current_gesture()
         if acceleration == 'freefall':
             break
     
     # 마이크로비트가 떨어진 시간을 계산합니다.
-    end_time = running_time()
+    end_time = utime.ticks_ms()
     fall_time_seconds = (end_time - start_time) / 1000  # 밀리초를 초로 변환
     
     # 중력 가속도를 상수로 정의합니다.
