--- a/Microbit/GPT+Microbit/04.연산자.md
+++ b/Microbit/GPT+Microbit/04.연산자.md
@@ -198,7 +198,7 @@ print(str(less_or_equal_result))
   - GPT 생성 코드
     ```
     from microbit import *
-    import utime
+    import utime  # 현재 시간과 날짜를 가져오고, 시간 간격을 측정하고, 지연을 위한 기능을 제공
     
     # 마이크로비트 떨어뜨린 순간의 가속도 값을 측정합니다.
     start_time = utime.ticks_ms()
