--- a/Microbit/GPT+Microbit/05.문자열(출력,연산).md
+++ b/Microbit/GPT+Microbit/05.문자열(출력,연산).md
@@ -103,33 +103,41 @@ display.scroll(message)
 ```
 
 ## 적용하기 샘플코드
-* a,b버튼을 10초동안 번갈아 누르고 카운팅하여 문자열 연산으로 출력
-```
-"""
-프롬프트 템프릿
-1.코드 언어:
-2.코드 설계 시 사용할 마이크로비트 라이브러리 함수:
-3.포함될 파이썬 문법:
-4.사용하지 않는 문법:
-5.코드 플래싱 시 마이크로 비트 최종 작동 모습:
-6.수정 할 샘플 코드:
-7.추가 요청 사항_01:
-8.추가 요청 사항_02:
-"""
+* 샘플코드_01
+   - GPT 프롬프트 템플릿
+    ```
+    프롬프트 템프릿
+    1.코드 언어:
+    2.코드 설계 시 사용할 마이크로비트 라이브러리 함수:
+    3.포함될 파이썬 문법:
+    4.사용하지 않는 문법:
+    5.코드 플래싱 시 마이크로 비트 최종 작동 모습:
+    6.수정 할 샘플 코드:
+    7.추가 요청 사항_01:
+    8.추가 요청 사항_02:
+    ```
 
-from microbit import *
-import time
+  - GPT 프롬프트 템플릿 입력 내용
+    ```
+    
+    ```
+    
+  - GPT 생성 코드
+    ```
+    #a,b버튼을 10초동안 번갈아 누르고 카운팅하여 문자열 연산으로 출력
 
-# 10초간 버튼 입력 기다리기
-display.scroll('Go!')
-time.sleep(10)
-
-# 버튼 누른 횟수 가져오기
-a_presses = button_a.get_presses()
-b_presses = button_b.get_presses()
-
-# 결과 문자열 생성 및 출력
-result = 'A: ' + str(a_presses) + ' times, B: ' + str(b_presses) + ' times'
-display.scroll(result)
-
-```
+    from microbit import *
+    import time
+    
+    # 10초간 버튼 입력 기다리기
+    display.scroll('Go!')
+    time.sleep(10)
+    
+    # 버튼 누른 횟수 가져오기
+    a_presses = button_a.get_presses()
+    b_presses = button_b.get_presses()
+    
+    # 결과 문자열 생성 및 출력
+    result = 'A: ' + str(a_presses) + ' times, B: ' + str(b_presses) + ' times'
+    display.scroll(result)
+    ```
