--- a/Microbit/GPT+Microbit/05.문자열(출력,연산).md
+++ b/Microbit/GPT+Microbit/05.문자열(출력,연산).md
@@ -121,10 +121,48 @@ display.scroll(message)
     ```
     
     ```
-    
-  - GPT 생성 코드
+  - GPT 초기 생성 코드
     ```
-    #a,b버튼을 10초동안 번갈아 누르고 카운팅하여 문자열 연산으로 출력
+    from microbit import *
+    import time
+   
+    # 초기 변수 설정
+    button_a_count = 0  # 버튼 A의 누름 횟수 초기화
+    button_b_count = 0  # 버튼 B의 누름 횟수 초기화
+   
+    # 시작 시간 기록
+    start_time = time.ticks_ms()
+   
+    # 메인 루프
+    while True:
+       # 현재 시간을 가져와서 10초가 경과했는지 확인
+       current_time = time.ticks_ms()
+       elapsed_time = current_time - start_time
+   
+       if elapsed_time >= 10000:
+           # 10초가 경과하면 버튼 누름 횟수를 문자열로 만들어 출력
+           message = 'Button A: ' + str(button_a_count) + ', Button B: ' + str(button_b_count)
+           display.scroll(message)
+           
+           # 초기화
+           button_a_count = 0
+           button_b_count = 0
+           start_time = time.ticks_ms()
+       
+       # 버튼 A와 B의 누름 횟수를 가져옴
+       button_a_presses = button_a.get_presses()
+       button_b_presses = button_b.get_presses()
+       
+       # 버튼 A가 눌린 횟수만큼 증가
+       button_a_count += button_a_presses
+       
+       # 버튼 B가 눌린 횟수만큼 증가
+       button_b_count += button_b_presses
+    ```  
+  - GPT 생성 코드 재수정
+    ```
+    # a,b버튼을 10초동안 번갈아 누르고 카운팅하여 문자열 연산으로 출력 코드 수정
+    # GPT가 생성한 코드가 때론 복잡할 수 있음
 
     from microbit import *
     import time
